--- a/category.html
+++ b/category.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="category.css" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
     <header class="header">
