--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
     <header class="header">
