--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="product-detail.css" />
   </head>
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2025 K Store. All Rights Reserved.</p>
+          <p>&copy; 2025 <kbd></kbd> Store. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
