Correct stylesheet link tag in cart.html
Fix self-closing tag for the stylesheet link.

--- a/cart.html
+++ b/cart.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- Liên kết với file CSS tùy chỉnh -->
     <link rel="stylesheet" href="cart_styles.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
