Update image sources and alt texts in index.html

--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
             </div>
             <div class="swiper-slide">
               <img
-                src="https://cdn2.cellphones.com.vn/insecure/rs:fill:0:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/s/a/samsung_galaxy_s24_ultra_256gb_-_1.png"
-                alt="Khuyến mãi S24 Ultra"
+                src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/690x300_iPhone_17_Pro_Opensale_v3.png"
+                alt="Iphone 17"
               />
             </div>
             <div class="swiper-slide">
               <img
-                src="https://cdn2.cellphones.com.vn/insecure/rs:fill:0:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/x/i/xiaomi_14t_pro_12gb_512gb_-_1.png"
-                alt="Khuyến mãi Xiaomi 14"
+                src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/AW11-opensale.png"
+                alt="Khuyến mãi"
               />
             </div>
           </div>
