--- a/cart.html
+++ b/cart.html
@@ -69,8 +69,48 @@
         </div>
     </main>
 
-    <footer class="footer">
-        <p>&copy; 2025 K Store. All rights reserved.</p>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-column about-us">
+            <h2>Về K Store</h2>
+            <p>
+              Chuyên cung cấp các dòng điện thoại thông minh chính hãng với giá
+              tốt nhất thị trường, cùng dịch vụ chăm sóc khách hàng tận tâm.
+            </p>
+          </div>
+          <div class="footer-column contact-info">
+            <h2>Thông tin liên hệ</h2>
+            <ul>
+              <li>
+                <i class="fa-solid fa-location-dot"></i>123 Mỹ Đình, Nam Từ
+                Liêm, Hà Nội
+              </li>
+              <li><i class="fa-solid fa-phone"></i>(024) 3333 9999</li>
+              <li>
+                <i class="fa-solid fa-envelope"></i>support@mobilestore.vn
+              </li>
+            </ul>
+          </div>
+          <div class="footer-column social-media">
+            <h2>Theo dõi chúng tôi</h2>
+            <div class="social-links">
+              <a href="#" title="Facebook"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a href="#" title="Instagram"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="#" title="Youtube"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2025 K Store. All Rights Reserved.</p>
+        </div>
+      </div>
     </footer>
 
     <script src="cart_scripts.js"></script>
