--- a/news.html
+++ b/news.html
@@ -3,20 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>K Store - Cửa hàng điện thoại</title>
+    <title>Tin công nghệ - K Store</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="news.css" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
@@ -38,7 +35,7 @@
               <a href="#"> <i class="fa-solid fa-keyboard"></i> Phụ kiện </a>
             </div>
           </div>
-          <a href="news.html" class="nav-button">
+          <a href="news.html" class="nav-button active">
             <i class="fa-solid fa-newspaper"></i>
             <span>Tin công nghệ</span>
           </a>
@@ -58,40 +55,14 @@
         </div>
       </div>
     </header>
+
     <main class="container">
-      <section class="news-section">
-        <h2>TIN TỨC & KHUYẾN MÃI</h2>
-        <div class="swiper mySwiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img
-                src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/home-20-10-dday.png"
-                alt="Khuyến mãi 20-10"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/690x300_iPhone_17_Pro_Opensale_v3.png"
-                alt="Iphone 17"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/AW11-opensale.png"
-                alt="Khuyến mãi"
-              />
-            </div>
-          </div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </section>
-      <section class="products-section">
-        <h2>SẢN PHẨM</h2>
-        <div class="product-grid" id="product-grid"></div>
-      </section>
+      <h1 class="page-title">TIN CÔNG NGHỆ MỚI NHẤT</h1>
+      <div class="news-grid" id="news-list">
+        <div class="loading-text">Đang tải tin tức...</div>
+      </div>
     </main>
+
     <footer class="site-footer">
       <div class="container">
         <div class="footer-content">
@@ -135,8 +106,9 @@
         </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <script src="products.js"></script>
     <script src="script.js"></script>
+    <script src="news.js"></script>
   </body>
 </html>
