--- a/html/article.html
+++ b/html/article.html
@@ -12,9 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="news.css" />
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/news.css" />
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
   </head>
   <body>
     <header class="header">
@@ -55,7 +55,7 @@
     <footer class="site-footer">
       </footer>
 
-    <script src="products.js"></script>
-    <script src="script.js"></script>
-    <script src="news.js"></script> <script src="article.js"></script> </body>
+    <script src="../js/products.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/news.js"></script> <script src="../js/article.js"></script> </body>
 </html>
