--- a/html/cart.html
+++ b/html/cart.html
@@ -13,8 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="cart_styles.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/cart_styles.css" />
   </head>
   <body>
     <header class="header">
@@ -124,7 +124,7 @@
       </div>
     </footer>
 
-    <script src="cart_scripts.js"></script>
-    <script src="script.js"></script>
+    <script src="../js/cart_scripts.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
