--- a/html/checkout.html
+++ b/html/checkout.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Thanh Toán Đơn Hàng</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="checkout.css">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="stylesheet" href="../css/checkout.css">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
 </head>
 <body>
     <header class="main-header">
@@ -69,6 +69,6 @@
         </div>
     </div>
 
-    <script src="checkout.js"></script>
+    <script src="../js/checkout.js"></script>
 </body>
 </html>
