--- a/html/category.html
+++ b/html/category.html
@@ -12,9 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="category.css" />
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/category.css" />
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
   </head>
   <body>
     <header class="header">
@@ -119,8 +119,8 @@
       </div>
     </footer>
 
-    <script src="products.js"></script>
-    <script src="category.js"></script>
-    <script src="script.js"></script>
+    <script src="../js/products.js"></script>
+    <script src="../js/category.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
