--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Đăng ký tài khoản</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../css/login.css" />
   </head>
   <body>
     <div class="login-container">
