--- a/html/search_results.html
+++ b/html/search_results.html
@@ -3,21 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>K Store - Cửa hàng điện thoại</title>
+    <title>Kết quả tìm kiếm</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
   </head>
   <body>
     <header class="header">
@@ -43,7 +39,7 @@
             <span>Tin công nghệ</span>
           </a>
         </div>
-          <div class="search-bar">
+       <div class="search-bar">
           <i class="fa-solid fa-magnifying-glass"></i>
           <input type="text" id="search-input" placeholder="Tìm kiếm sản phẩm...">
           <div id="search-suggestions" class="search-suggestions"></div> 
@@ -57,40 +53,15 @@
         </div>
       </div>
     </header>
+
     <main class="container">
-      <section class="news-section">
-        <h2>TIN TỨC & KHUYẾN MÃI</h2>
-        <div class="swiper mySwiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img
-                src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/home-20-10-dday.png"
-                alt="Khuyến mãi 20-10"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/690x300_iPhone_17_Pro_Opensale_v3.png"
-                alt="Iphone 17"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="https://cdn2.cellphones.com.vn/insecure/rs:fill:1036:450/q:90/plain/https://dashboard.cellphones.com.vn/storage/AW11-opensale.png"
-                alt="Khuyến mãi"
-              />
-            </div>
-          </div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-pagination"></div>
+      <h1 id="search-results-title" style="margin: 30px 0;">
+        Kết quả tìm kiếm: ""
+      </h1>
+      <div class="product-grid" id="search-results-grid">
         </div>
-      </section>
-      <section class="products-section">
-        <h2>SẢN PHẨM</h2>
-        <div class="product-grid" id="product-grid"></div>
-      </section>
     </main>
+
     <footer class="site-footer">
       <div class="container">
         <div class="footer-content">
@@ -134,8 +105,9 @@
         </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="products.js"></script>
-    <script src="script.js"></script>
+
+    <script src="../js/products.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/search_results.js"></script>
   </body>
 </html>
