--- a/html/checkout.html
+++ b/html/checkout.html
@@ -64,7 +64,7 @@
         <div class="modal-content">
             <span id="close-modal" class="close-button">&times;</span>
             <h2>Quét mã QR để đặt cọc</h2>
-            <img src="images/maqr.jpg" alt="Mã QR" class="qr-image">
+            <img src="../images/maqr.jpg" alt="Mã QR" class="qr-image">
             <p>Vui lòng quét bằng ứng dụng ngân hàng hoặc ví điện tử để xác nhận đặt cọc.</p>
         </div>
     </div>
